# erowid-lsa

./: analysis.py  erowid-scrape.py  pyproject.toml  report_vectors.csv  report_vectors_2d.csv
cosine_dmh_woodrose_salvia200/: report_vectors.csv  report_vectors_2d.csv
cosine_random100/: report_vectors.csv  report_vectors_2d.csv
cosine_random1000/: report_vectors_2d.csv
random1000/: report_vectors_2d.csv
salvia100/: report_vectors.csv  report_vectors_2d.csv
top_15_200/: report_vectors_2d.csv
